modified:   .github/workflows/deploy.yml 	modified:   .vscode/settings.json 	modified:   package.json 	modified:   postcss.config.cjs 	modified:   src/app.html 	modified:   src/routes/+layout.ts 	modified:   src/routes/+page.svelte 	modified:   src/routes/+page.ts 	modified:   svelte.config.js 	modified:   tailwind.config.ts 	modified:   vite.config.ts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
-	"prettier.documentSelectors": [
-		"**/*.svelte"
-	],
+	"prettier.documentSelectors": ["**/*.svelte"],
 	"tailwindCSS.classAttributes": [
 		"class",
 		"accent",
@@ -117,9 +115,7 @@
 		"width",
 		"zIndex"
 	],
-	"cSpell.words": [
-		"Todos"
-	],
+	"cSpell.words": ["Todos"],
 	"liveServer.settings.multiRootWorkspaceName": "frontend",
 	"liveServer.settings.port": 5174
 }
